# danso-backend

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
danso/: asgi.py  settings.py  urls.py  views.py  wsgi.py
danso/templates/: add_sentence_pack_dashboard.html  api_docs.html  dashboard_sentence_pack_edit.html  dashboard_sentence_pack_list.html  error_auth.html
leaderboard/: views.py
realtime/: manager.py  views.py
sentence/: admin.py  apps.py  models.py  views.py
sentence/migrations/: 0001_initial.py  0002_alter_sentencepack_sentences.py  0003_sentenceleaderboard.py  0004_sentencepack_level.py  0005_alter_sentencepack_options_sentencepacklike.py  0005_rename_total_score_sentenceleaderboard_score.py  0006_alter_sentenceleaderboard_options.py  0007_sentencepack_image_id_alter_sentencepacklike_pack.py  0008_sentencepack_image_file_alter_sentencepack_image_id.py  0009_remove_sentencepack_image_file_and_more.py
user/: admin.py  auth.py  login_code_manager.py  models.py  views.py
user/migrations/: 0001_initial.py  0002_rename_user_gameuser.py  0003_gameuser_login_code.py  0004_alter_gameuser_nickname.py  0005_alter_gameuser_options.py  0006_gameuser_history_gameuser_now.py
user/templates/: error_login.html  profile_edit.html  success_login.html
