[project]
name = "danso-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "adrf>=0.1.9",
    "aiohttp>=3.12.13",
    "boto3>=1.39.7",
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-redis>=5.4.0",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.34.3",
    "uvicorn-worker>=0.3.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
